spacing fix

--- a/webapp/src/app/components/nav-bar/nav-bar.component.scss
+++ b/webapp/src/app/components/nav-bar/nav-bar.component.scss
@@ -3,7 +3,7 @@
     top: var(--spacing);
     left: var(--spacing);
     padding-top: var(--large-spacing);
-    padding-bottom: var(--large-spacing);
+    padding-bottom: var(--spacing);
     justify-content: space-evenly;
     z-index: 99;  // above everything else
 
