--- a/webapp/src/app/styles/size.scss
+++ b/webapp/src/app/styles/size.scss
@@ -1,6 +1,6 @@
 :root {
     --large-profile-picture-size: 56px;
-    --nav-bar-height: 84px;  // used only in mobile mode
+    --nav-bar-height: 68px;  // used only in mobile mode
     --nav-bar-width: 100px;  // used only in desktop mode
     --top-bar-height: 48px;  // keep in sync with comment-section and idea-list root margin
 }
